--- a/client-quasar/src/css/quasar.variables.styl
+++ b/client-quasar/src/css/quasar.variables.styl
@@ -9,11 +9,18 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   = #027BE3
-$secondary = #26A69A
-$accent    = #9C27B0
+// $primary   = #027BE3
+// $secondary = #26A69A
+// $accent    = #9C27B0
 
 $positive  = #21BA45
 $negative  = #C10015
-$info      = #31CCEC
-$warning   = #F2C037
+// $info      = #31CCEC
+// $warning   = #F2C037
+
+//Spotify colors
+$primary   = #1DB954
+$secondary = #BAA31E
+$accent    = #BA1E83
+$info      = #1E35BA
+$warning   = $secondary
